# TesiProject

./: CMakeLists.txt  GreenPlantModel  Note.txt  TODO.txt  a.out  m  modello  prova.cpp  prova2  prova3
Dati/: incotroMartedi.md  incotroMartedi.txt  modello.md  modellobatteria.md  tempidiesecuzione.txt
Log/: cambio_configurazione_0.txt  cambio_configurazione_1.txt  cambio_configurazione_2.txt  cambio_configurazione_3.txt
cfg/: fmxcku115r1_1.cfg  fmxcku115r1_2.cfg  fmxcku115r1_3.cfg
cfg1/: fmxcku115r1_1.cfg  fmxcku115r1_2.cfg  fmxcku115r1_3.cfg
csv/: 2017.csv
datiTemporali/: 2018.csv  GreenPlantModel.cpp  GreenPlantModel.h  appunti.txt  calcolim  calcolimensili.cpp  campane  campaneEnergetiche.txt  giornate  giornatesignificative.cpp  giornatesignificative.txt
datiTemporali/DatiMensili/: agosto.txt  aprile.txt  febbraio.txt  gennaio.txt  giugno.txt  luglio.txt  maggio.txt  marzo.txt  novembre.txt  ottobre.txt  settembre.txt
grafico/: .~lock.tabelle_consumi.ods#  tabelle_consumi.ods
include/: Modello.h  batteria.h  chargeController.h  commonFunc.h  configurazione.h  defines.h  epever.h  modelloPannello.h  previsione.h  strategia.h  strategiaGreedy.h  strategiaGreedyPredizione.h  strategiaPredizioneSimul.h  strategiaVirtuale.h  strategiaVirtualePredizione.h  tempo.h
riserva/: gestioneEnergeticaSeriale.cpp  gestioneEnergeticaT.cpp  gestioneenergeticaThread.cpp  previsione.cpp
src/: GreenPlantModel.cpp  Modello.cpp  batteria.cpp  commonFunc.cpp  epever.cpp  gestioneEnergetica.cpp  modelloPannello.cpp  previsione.cpp  profpgarun.cpp  startegiaGreedyPredizione.cpp  strategia.cpp  strategiaGreedy.cpp  strategiaPredizioneSimul.cpp  strategiaVirtuale.cpp  strategiaVirtualePredizione.cpp  tempo.cpp  virtual
test/: GreenPlantModel  GreenPlantModel.cpp  model  previsioneVirtuale.cpp  previsioneVirtuale.h  prova  rando.cpp  random  sobel  sobel.c  strategiaPredizioneSimul.cpp  strategiaPredizioneSimul.h  testSobel  testSobel.cpp  test_sobel  thread  threads.cpp
testPrevisione/: 2019.csv  GreenPlantModel.cpp  defines.h  giornate  giornatesignificative copy.cpp  main  mainPlantModel.cpp  note.txt  previsione.h  previsioneWCMA.cpp  tempo.h
testPrevisione/include/: defines.h  previsione.h  tempo.h
